# Orivanta-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  test_api.py  test_tavily.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  reproduce_bug.py  requirements-dev.txt  requirements.txt  test_research.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/: __init__.py  main.py
backend/src/api/: deps.py  middleware.py
backend/src/api/v1/: auth.py  collections.py  discover.py  group_threads.py  router.py  search.py  spaces.py  (+2 more)
backend/src/config/: logging.py  models.py  prompts.py  settings.py
backend/src/core/: events.py  exceptions.py  security.py
backend/src/db/: redis.py  repository.py  session.py
backend/src/models/: __init__.py  collection.py  group_thread.py  message.py  source.py  space.py  thread.py  user.py
backend/src/providers/: anthropic.py  base.py  google.py  openai.py
backend/src/schemas/: auth.py  collection.py  search.py  space.py  thread.py  user.py
backend/src/services/: auth_service.py  citation_service.py  collection_service.py  discover_service.py  group_thread_service.py  llm_service.py  query_router.py  rag_service.py  search_orchestrator.py  space_service.py  thread_service.py  user_service.py  web_search_service.py
backend/src/utils/: rate_limiter.py  streaming.py  text.py
backend/tests/: conftest.py  test_auth.py  test_search.py  test_threads.py
backend/tests/test_services/: test_citation_service.py  test_llm_service.py  test_search_orchestrator.py
(+126 files in other folders)
